...
                  ),

                  const SizedBox(height: 12),

                  const Center(
                    child: Text(
                      'Create account',
                      style: TextStyle(
                        color: AppColors.white,
                        fontSize: 26,
                        fontWeight: FontWeight.bold,
                      ),
                    ),
...
